# k8s-mcp

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  PLAN.md  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
deploy/rbac/: README.md  namespace-operator.yaml  nvidia-gpu-read-only.yaml  read-only.yaml
docs/: CHANGELOG.md  PLAN.md  README.en.md  README.md  ROADMAP.md  architecture.md  contributing.md  deployment.en.md  deployment.md  env.en.md  env.md  examples.md  gpu.en.md  gpu.md  proposal-exec-pod.md  publishing.md  quickstart.en.md  quickstart.md  security.en.md  security.md  tools-reference.md  tools.md  troubleshooting.md  usage.md
scripts/: bump_and_release.sh  pre_release_check.py
src/k8s_mcp/: __init__.py  auth.py  client.py  config.py  formatters.py  safety.py  server.py
src/k8s_mcp/tools/: autoscale.py  bulk.py  certs.py  cluster_info.py  configmap.py  delete_tool.py  diagnostics.py  discovery.py  events.py  explain.py  generic.py  health.py  jsonpath.py  logs.py  metrics.py  namespace.py  networkpolicy.py  node_ops.py  notifier.py  nvidia_gpu.py  nvidia_metrics.py  pods.py  prometheus.py  rbac.py  resource_usage.py  rollout.py  secret.py  service.py  serviceaccount.py  storage.py  wait_tool.py  workload.py
tests/: conftest.py  test_analyze_networkpolicy.py  test_analyze_rbac.py  test_auth.py  test_bulk.py  test_bulk_delete_pvc.py  test_call_tool_safety_nets.py  test_caller_binding.py  test_certs.py  test_cli.py  test_config.py  test_delete.py  test_delete_low_risk.py  test_deprecation_markers.py  test_diagnose_deployment.py  test_diagnose_pod.py  test_discovery_cache_cap.py  test_discovery_events.py  test_endpoints.py  test_exec_pod.py  test_explain_pod.py  test_formatters.py  test_generic.py  test_health.py  test_label_patch.py  test_logs_empty.py  test_logs_filter.py  test_logs_pods_events.py  test_logs_time_window.py  test_metrics.py  test_namespace_configmap_secret.py  test_node_ops_extended.py  test_notifier.py  test_notifier_url_safety.py  test_nvidia_gpu.py  test_nvidia_metrics.py  test_ops_tools.py  test_prometheus.py  test_rbac.py  test_resource_usage.py  (+11 more)
tests/integration/: __init__.py  conftest.py  test_apply_delete_lifecycle.py
