[project]
name = "k8s-mcp-bilbilmyc"
version = "0.2.1"
description = "Kubernetes MCP server for LLM agents — 70 tools covering CRUD on workloads/services/storage/RBAC, logs/events, Prometheus queries, bulk ops with HMAC 2-step confirmation."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "mayc" },
]
keywords = [
    "kubernetes", "k8s", "mcp", "model-context-protocol",
    "llm", "agent", "devops", "claude", "cherry-studio",
    "kubectl", "k8s-mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Monitoring",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0",
    "kubernetes>=29.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "cryptography>=42.0",
]

[project.urls]
Homepage = "https://github.com/bilbilmyc/k8s-mcp"
Repository = "https://github.com/bilbilmyc/k8s-mcp"
Issues = "https://github.com/bilbilmyc/k8s-mcp/issues"
Changelog = "https://github.com/bilbilmyc/k8s-mcp/blob/main/PLAN.md"

[project.scripts]
k8s-mcp = "k8s_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/k8s_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--ignore=tests/integration"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]
